initial project setup

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="has-children">
                   <a href="students.html">Students</a>
                   <!-- <ul class="dropdown">
@@ -81,7 +81,7 @@
                   </ul> -->
                 </li>
                 <li><a href="courses.html">Courses</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -119,99 +119,80 @@
 
 
 
-    <div class="container-fluid" data-aos="fade" data-aos-delay="500">
-      <div class="row">
-        <div class="col-lg-4">
+    <div class="site-section" data-aos="fade">
+      <div class="container-fluid">
 
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Raavi</h2>
-              <a href="https://srgian.netlify.app/raavi/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+        <div class="row justify-content-center">
+
+          <div class="col-md-7">
+            <div class="row mb-5">
+              <div class="col-12 ">
+                <h2 class="site-section-heading text-center">About Us</h2>
+              </div>
             </div>
-            <img src="https://srgian.netlify.app/raavi/image.jpeg" alt="Image" class="img-fluid">
           </div>
 
         </div>
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Portrait</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
+
+        <div class="row mb-5">
+          <div class="col-md-7">
+            <img src="images/img_2.jpg" alt="Images" class="img-fluid">
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+          <div class="col-md-4 ml-auto">
+            <h3 class="text-white">My Mission</h3>
+            <p>At SRG Computer Institute, we help students learn important computer skills that are useful in today's
+              world. We offer courses on things like creating websites, developing apps, using Excel, learning Tally for
+              accounting, graphic designing, and basic computer skills. Our goal is to teach you not just theory but
+              also practical skills that you can use in real-life situations. Our experienced teachers make learning fun
+              and easy, using simple methods that help you understand even the most difficult topics.</p>
+            <p>We want all our students to feel confident with computers, whether they are starting from scratch or
+              looking to improve their skills. Our classrooms are designed to help you learn at your own pace and ask
+              questions when needed. At SRG Computer Institute, we believe in making computer education accessible for
+              everyone!</p>
+            <p>Our mission at SRG Computer Institute is to teach students important computer skills in a simple and easy
+              way. We want to help students become skilled and confident in using technology for their future jobs or
+              studies. We believe in creating a fun and supportive learning environment where every student can succeed.
+              By offering practical training and focusing on real-world knowledge, we help students build the skills
+              they need to do well in the digital world.</p>
           </div>
         </div>
 
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
+
+        <div class="row site-section">
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+            <img src="images/suraj-jha.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+            <h2 class="text-white font-weight-light mb-4">Suraj Jha</h2>
+            <p class="mb-4">SRG Computer Institute helped me improve my computer skills and learn website development.
+              The teachers are friendly and make learning easy. I feel more confident now in using technology!</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+            <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+            <h2 class="text-white font-weight-light mb-4">Archana Rajput</h2>
+            <p class="mb-4">SRG Computer Institute's Basic Computer course was perfect for me. The lessons were simple
+              and easy to follow, and now I’m comfortable using computers for everyday tasks. Highly recommended!</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+            <img src="images/sachin.jpeg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+            <h2 class="text-white font-weight-light mb-4">Sachin Verma</h2>
+            <p class="mb-4">The app development course at SRG was amazing! The hands-on training and practical projects
+              made learning enjoyable. I now have the skills to create my own apps. Highly recommend!</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
           </div>
         </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Animals</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Sports</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Travel</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
       </div>
     </div>
 
