--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,7 @@
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="has-children">
                   <a href="students.html">Students</a>
                   <!-- <ul class="dropdown">
@@ -80,7 +80,7 @@
                     </li>
                   </ul> -->
                 </li>
-                <li><a href="courses.html">Courses</a></li>
+                <li class="active"><a href="courses.html">Courses</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -91,18 +91,16 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="https://www.facebook.com/SRGCTI/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="https://x.com/SRGCTI/" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/srg_computer_institute/" class="pl-3 pr-3"><span
-                      class="icon-instagram"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/@SRGCTI/" class="pl-3 pr-3"><span
-                      class="icon-youtube-play"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
                 </li>
               </ul>
             </div>
@@ -119,99 +117,79 @@
 
 
 
-    <div class="container-fluid" data-aos="fade" data-aos-delay="500">
-      <div class="row">
-        <div class="col-lg-4">
+    <div class="site-section" data-aos="fade">
+      <div class="container-fluid">
 
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Raavi</h2>
-              <a href="https://srgian.netlify.app/raavi/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+        <div class="row justify-content-center">
+
+          <div class="col-md-7">
+            <div class="row mb-5">
+              <div class="col-12 ">
+                <h2 class="site-section-heading text-center">Our Best Courses</h2>
+              </div>
             </div>
-            <img src="https://srgian.netlify.app/raavi/image.jpeg" alt="Image" class="img-fluid">
           </div>
 
         </div>
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Portrait</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
-            </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
 
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+        <div class="row">
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">Website Development</h3>
+              <p>Learn to build and design responsive websites using modern tools and technologies.
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 9999/-</strong></p>
             </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Animals</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">App Development</h3>
+              <p>Master app development for Android and iOS using leading frameworks and languages.
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 15000/-</strong></p>
             </div>
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Sports</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">Advance Excel Training</h3>
+              <p>Enhance your skills with advanced Excel techniques for data analysis and management.
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 3999/-</strong></p>
             </div>
-            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
 
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Travel</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">Tally Prime / ERP 9</h3>
+              <p>Gain expertise in Tally Prime and ERP 9 for accounting, GST, and business management.
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 3999/-</strong></p>
             </div>
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">Graphic & Video Editing</h3>
+              <p>Learn graphic and video editing to create professional visual content and multimedia.
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 4999/-</strong></p>
             </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+          <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="h-100 p-4 p-lg-5 site-block-feature-7">
+              <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
+              <h3 class="text-white h4">DCA / Basic Computer</h3>
+              <p>Understand computer basics and develop essential skills with DCA (Diploma in Computer Applications).
+              </p>
+              <p><strong class="font-weight-bold text-primary">INR 3600/-</strong></p>
             </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
           </div>
-        </div>
 
+        </div>
       </div>
     </div>
 
