--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SRGian &mdash; Websites Designed by Students</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
