--- a/madhu/index.html
+++ b/madhu/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> madhu webpage </title>
+    <title> Madhu - Portfolio </title>
 </head>
 
 <body style="background-color:lightpink;text-align:left;max-width:650px; margin:auto; height: 100vh;">
