madhu project added on home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -137,10 +137,10 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Portrait</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Madhu</h2>
+              <a href="https://srgian.netlify.app/madhu/" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
-            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-4">
