rakhi and Beauty project link added

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ s<!DOCTYPE html>
               <a href="https://srgian.netlify.app/raavi/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
-            <img src="https://srgian.netlify.app/raavi/image.jpeg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/raavi/image.jpeg" alt="Raavi" class="img-fluid">
           </div>
 
         </div>
@@ -140,26 +140,26 @@ s<!DOCTYPE html>
               <h2 class="mb-3">Madhu</h2>
               <a href="https://srgian.netlify.app/madhu/" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
-            <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Madhu" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Beauty</h2>
+              <a href="https://srgian.netlify.app/beauty" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/beauty/beauty.jpg" alt="Beauty" class="img-fluid">
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Rakhi</h2>
+              <a href="https://srgian.netlify.app/rakhi/" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/rakhi/srg-girl.jpg" alt="Rakhi" class="img-fluid">
           </div>
         </div>
 
