--- a/beauty/index.html
+++ b/beauty/index.html
@@ -11,7 +11,7 @@
 
     <div style="background-color: white; text-align:center; padding: 20px;">
 
-        <img src="./beauty.jpg" "width20%" style="border-radius:50%;">
+        <img src="./beauty.jpg" style="border-radius:50%; width:30%;">
         <h1>Beauty Rani</h1>
         <p>Student | Web developer | Tech Enthusist</p>
 
