--- a/devansh/index.html
+++ b/devansh/index.html
@@ -26,15 +26,17 @@
           <div class="sub-mbox">
             <div class="span-sec">
               <p class="span-1">Hi There,</p>
-              <p class="span-2">I'm a Web Developer</p>
+              <p class="span-2">I'm Devansh Sharma</p>
+              <p class="span-4">WEB DEVELOPER</p>
             </div>
 
             <p class="intro">
-              I'm a <span class="span-3">Devansh Sharma</span>. I'm a web
+              I'm a <span class="span-3">Web Devaloper</span>
               developer based in India. I have a passion for web development.
             </p>
             <p class="intro">
-              I love to create amazing websites for mobile and devices.
+              I love to create amazing websites for mobile and all type of
+              devices.
             </p>
           </div>
         </div>
@@ -93,7 +95,9 @@
             <a class="two" href="twitter.com"><img src="twitter.png" /></a>
             <a class="two" href="instagram.com"><img src="insta.png" /></a>
           </nav>
-          <p class="ending">Copyright ©2024. Designed by Devansh Sharma</p>
+          <p class="ending">
+            Copyright ©2024. By <span class="span-3">Devansh Sharma</span>
+          </p>
         </footer>
       </div>
     </div>
