--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-s<!DOCTYPE html>
+s
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <title>SRGian &mdash; Websites Designed by Students</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
@@ -138,7 +139,8 @@ s<!DOCTYPE html>
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Madhu</h2>
-              <a href="https://srgian.netlify.app/madhu/" class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="https://srgian.netlify.app/madhu/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Madhu" class="img-fluid">
           </div>
@@ -147,7 +149,8 @@ s<!DOCTYPE html>
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Beauty</h2>
-              <a href="https://srgian.netlify.app/beauty" class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="https://srgian.netlify.app/beauty" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/beauty/beauty.jpg" alt="Beauty" class="img-fluid">
           </div>
@@ -157,7 +160,8 @@ s<!DOCTYPE html>
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Rakhi</h2>
-              <a href="https://srgian.netlify.app/rakhi/" class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="https://srgian.netlify.app/rakhi/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/rakhi/srg-girl.jpg" alt="Rakhi" class="img-fluid">
           </div>
@@ -166,52 +170,83 @@ s<!DOCTYPE html>
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Animals</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Devansh</h2>
+              <a href="https://srgian.netlify.app/devansh/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Sports</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Suraj</h2>
+              <a href="https://srgian.netlify.app/suraj/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/suraj/image.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Travel</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Mayank</h2>
+              <a href="https://srgian.netlify.app/mayank/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/mayank/FB_IMG_1698990087056.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">People</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Abhishek</h2>
+              <a href="https://srgian.netlify.app/abhishek/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgeducation.in/images/testo/man.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
-              <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+              <h2 class="mb-3">Kartik</h2>
+              <a href="https://srgian.netlify.app/kartik/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
           </div>
         </div>
+
+        <div class="col-lg-4">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Naitik</h2>
+              <a href="https://srgian.netlify.app/naitik/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgeducation.in/images/testo/man.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Himanshu</h2>
+              <a href="https://srgian.netlify.app/himanshu/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+
+
+
 
       </div>
     </div>
