--- a/suraj/e-commerce-suraj/index.html
+++ b/suraj/e-commerce-suraj/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quick BUY</title>
+    <title>Quick BUY - Ecommerce Website by Suraj Jha</title>
     <link
       rel="shortcut icon"
       href="Myntra-Symbol-500x281.png"
