minor issues fixxed
logo update, minor css fix and html classes update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">SRGian</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">
+                <img src="./images/srg-logo-white.png" width="140px" alt="SRG Computer Training Institute"></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -122,7 +123,7 @@
 
     <div class="container-fluid" data-aos="fade" data-aos-delay="500">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-sm-6 col-md-4 col-lg-3">
 
           <div class="image-wrap-2">
             <div class="image-info">
@@ -134,7 +135,7 @@
           </div>
 
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Madhu</h2>
@@ -144,7 +145,7 @@
             <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Madhu" class="img-fluid">
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Beauty</h2>
@@ -155,7 +156,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Rakhi</h2>
@@ -166,18 +167,18 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Devansh</h2>
               <a href="https://srgian.netlify.app/devansh/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Suraj</h2>
@@ -188,7 +189,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Mayank</h2>
@@ -199,47 +200,57 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Abhishek</h2>
               <a href="https://srgian.netlify.app/abhishek/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgeducation.in/images/testo/man.png" alt="Image" class="img-fluid">
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Kartik</h2>
               <a href="https://srgian.netlify.app/kartik/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Naitik</h2>
               <a href="https://srgian.netlify.app/naitik/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgeducation.in/images/testo/man.png" alt="Image" class="img-fluid">
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Himanshu</h2>
               <a href="https://srgian.netlify.app/himanshu/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgeducation.in/images/testo/man2.png" alt="Image" class="img-fluid">
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Blank Space</h2>
+              <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
