--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 
 <head>
-  <title>SRGian &mdash; Websites Designed by Students</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Meta Title -->
+  <title>SRGian Student-Created Websites | SRG Computer Institute</title>
+
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Explore a collection of innovative websites designed by talented students at SRG Computer Institute. Browse unique web development projects showcasing creativity, technical skills, and cutting-edge design. Join us to start your web development journey today!">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords"
+    content="SRG Computer Institute, student website designs, web development projects, student portfolios, website design showcase, web design skills, student web development, learn web development, SRG Computer Institute projects">
+
+  <!-- Open Graph (for social media sharing) -->
+  <meta property="og:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta property="og:description"
+    content="Discover the creative and technical web development projects by students at SRG Computer Institute. See their innovative designs and join our courses to start your web development journey!">
+  <meta property="og:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta property="og:url" content="https://srgian.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta name="twitter:description"
+    content="Discover student-designed websites at SRG Computer Institute. View their creative portfolios and innovative projects. Start your web development journey now!">
+  <meta name="twitter:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <link
